show total number of hits

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,9 @@
         <div class="row g-2">
           <div class="col-12 col-md">
             <form id="search-form" class="inline-form" onsubmit="return false">
-              <input name="q" type="search" class="form-control" placeholder="Enter search terms" autofocus/>
+              <div class="input-group">
+                <input name="q" type="search" class="form-control" placeholder="Enter search terms" autofocus/>
+              </div>
             </form>
           </div>
           <div class="col-auto">
