preload assets in HTML; use Cache-Control; refactoring

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8"/>
+
+    <link rel="preload" href="/fontawesome-free-5.15.2-web/css/all.min.css" as="style"/>
+    <link rel="preload" href="/css/bookmarks.css" as="style"/>
+
+    <link rel="preload" href="/js/jquery-3.5.1.min.js" as="script"/>
+    <link rel="preload" href="/js/tagging-1.3.3.min.js" as="script"/>
+    <link rel="preload" href="/js/bootstrap-5.0.0-beta2.bundle.min.js" as="script"/>
+    <link rel="preload" href="/js/d3-6.5.0.min.js" as="script"/>
+    <link rel="preload" href="/js/require-2.3.6.min.js" as="script"/>
+    <link rel="preload" href="/js/bookmarks/bookmarks.js" as="script"/>
+    <link rel="preload" href="/js/bookmarks/fetch-util.js" as="script"/>
+    <link rel="preload" href="/js/bookmarks/notify.js" as="script"/>
+    <link rel="preload" href="/js/bookmarks/require-util.js" as="script"/>
+
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
     <title>Bookmarks</title>
