use correct layer

--- a/scss/components.scss
+++ b/scss/components.scss
@@ -7,7 +7,7 @@
 	}
 }
 
-@layer components {
+@layer utilities {
 	.is-invalid {
 		@apply border-red-500 focus:border-red-500 focus:ring-red-300;
 	}
