--- a/templates/index.html
+++ b/templates/index.html
@@ -3,25 +3,25 @@
   <head>
     <meta charset="UTF-8"/>
 
-    <link rel="preload" href="/fontawesome-free-5.15.2-web/css/all.min.css" as="style"/>
-    <link rel="preload" href="/css/bookmarks.css" as="style"/>
+    <link rel="preload" href="/fontawesome-free-5.15.2-web/css/all.min.css" as="style" crossorigin="use-credentials"/>
+    <link rel="preload" href="/css/bookmarks.css" as="style" crossorigin="use-credentials"/>
+    <link rel="preload" href="/fontawesome-free-5.15.2-web/webfonts/fa-solid-900.woff2" as="font" type="font/woff2" crossorigin="anonymous"/>
 
-    <link rel="preload" href="/js/jquery-3.5.1.min.js" as="script"/>
-    <link rel="preload" href="/js/tagging-1.3.3.min.js" as="script"/>
-    <link rel="preload" href="/js/bootstrap-5.0.0-beta2.bundle.min.js" as="script"/>
-    <link rel="preload" href="/js/d3-6.5.0.min.js" as="script"/>
-    <link rel="preload" href="/js/require-2.3.6.min.js" as="script"/>
-    <link rel="preload" href="/js/bookmarks/bookmarks.js" as="script"/>
-    <link rel="preload" href="/js/bookmarks/fetch-util.js" as="script"/>
-    <link rel="preload" href="/js/bookmarks/notify.js" as="script"/>
-    <link rel="preload" href="/js/bookmarks/require-util.js" as="script"/>
+    <link rel="preload" href="/js/jquery-3.5.1.min.js" as="script" crossorigin="use-credentials"/>
+    <link rel="preload" href="/js/tagging-1.3.3.min.js" as="script" crossorigin="use-credentials"/>
+    <link rel="preload" href="/js/bootstrap-5.0.0-beta2.bundle.min.js" as="script" crossorigin="use-credentials"/>
+    <link rel="preload" href="/js/d3-6.5.0.min.js" as="script" crossorigin="use-credentials"/>
+
+    <link rel="preload" href="/js/bookmarks/fetch-util.mjs" as="script" crossorigin="use-credentials"/>
+    <link rel="preload" href="/js/bookmarks/notify.mjs" as="script" crossorigin="use-credentials"/>
+    <link rel="preload" href="/js/bookmarks/bookmarks.mjs" as="script" crossorigin="use-credentials"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
     <title>Bookmarks</title>
 
-    <link rel="stylesheet" href="/fontawesome-free-5.15.2-web/css/all.min.css" type="text/css"/>
-    <link rel="stylesheet" href="/css/bookmarks.css" type="text/css"/>
+    <link rel="stylesheet" href="/fontawesome-free-5.15.2-web/css/all.min.css" type="text/css" crossorigin="use-credentials"/>
+    <link rel="stylesheet" href="/css/bookmarks.css" type="text/css" crossorigin="use-credentials"/>
   </head>
 
   <body class="p-5">
@@ -80,21 +80,11 @@
       </div>
     </div>
 
-    <script type="text/javascript" src="/js/jquery-3.5.1.min.js"></script>
-    <script type="text/javascript" src="/js/tagging-1.3.3.min.js"></script>
-    <script type="text/javascript" src="/js/bootstrap-5.0.0-beta2.bundle.min.js"></script>
-    <script type="text/javascript" src="/js/d3-6.5.0.min.js"></script>
-    <script type="text/javascript" src="/js/require-2.3.6.min.js"></script>
-    <script type="text/javascript" src="/js/bookmarks/require-util.js"></script>
+    <script type="text/javascript" src="/js/jquery-3.5.1.min.js" crossorigin="use-credentials"></script>
+    <script type="text/javascript" src="/js/tagging-1.3.3.min.js" crossorigin="use-credentials"></script>
+    <script type="text/javascript" src="/js/bootstrap-5.0.0-beta2.bundle.min.js" crossorigin="use-credentials"></script>
+    <script type="text/javascript" src="/js/d3-6.5.0.min.js" crossorigin="use-credentials"></script>
 
-    <script type="text/javascript">
-      require.config({
-        'baseUrl': '/js/bookmarks'
-      });
-
-      requirePromise('bookmarks').then(bookmarks => {
-        bookmarks.init();
-      });
-    </script>
+    <script type="module" src="/js/bookmarks/bookmarks.mjs" crossorigin="use-credentials"></script>
   </body>
 </html>
