improve button borders and background colors

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
       <form id="search-form" class="flex" onsubmit="return false">
         <input name="q" type="text" class="flex-auto mr-3 rounded border border-gray-300 focus:outline-none focus:border-blue-400 focus:ring focus:ring-blue-300" placeholder="Enter search terms" autofocus/>
 
-        <button id="add-bookmark-button" class="flex-none rounded border border-blue-500 px-3 py-1.5 text-blue-500 hover:bg-blue-500 hover:text-white focus:outline-none focus:ring focus:ring-blue-300">
+        <button id="add-bookmark-button" class="flex-none rounded border border-blue-500 px-3 py-1.5 text-blue-500 hover:border-blue-600 hover:bg-blue-600 hover:text-white focus:outline-none focus:ring focus:ring-blue-300">
           <i class="fas fa-plus"></i>
           New
         </button>
@@ -75,9 +75,9 @@
           </div>
 
           <div class="flex flex-wrap flex-shrink-0 items-center justify-end p-3 border-t">
-            <button id="add-bookmark-dialog-add-button" type="button" class="flex-none rounded m-1 px-3 py-1.5 bg-blue-500 text-white hover:bg-blue-600 focus:outline-none focus:ring focus:ring-blue-300">Save</button>
-            <button id="add-bookmark-dialog-delete-button" type="button" class="flex-none rounded m-1 px-3 py-1.5 border border-red-500 text-red-500 hover:bg-red-500 hover:text-white focus:outline-none focus:ring focus:ring-red-300">Delete</button>
-            <button type="button" class="flex-none rounded m-1 px-3 py-1.5 border border-gray-500 text-gray-500 hover:bg-gray-500 hover:text-white focus:outline-none focus:ring focus:ring-gray-300" data-bs-dismiss="modal">Cancel</button>
+            <button id="add-bookmark-dialog-add-button" type="button" class="flex-none rounded m-1 px-3 py-1.5 border border-blue-500 bg-blue-500 text-white hover:border-blue-600 hover:bg-blue-600 focus:outline-none focus:ring focus:ring-blue-300">Save</button>
+            <button id="add-bookmark-dialog-delete-button" type="button" class="flex-none rounded m-1 px-3 py-1.5 border border-red-500 text-red-500 hover:border-red-600 hover:bg-red-600 hover:text-white focus:outline-none focus:ring focus:ring-red-300">Delete</button>
+            <button type="button" class="flex-none rounded m-1 px-3 py-1.5 border border-gray-500 text-gray-500 hover:border-gray-600 hover:bg-gray-600 hover:text-white focus:outline-none focus:ring focus:ring-gray-300" data-bs-dismiss="modal">Cancel</button>
           </div>
         </div>
       </div>
