use base styles based on tailwindcss/typography

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
       <div class="modal-dialog relative w-auto max-w-full md:max-w-screen-sm xl:max-w-screen-lg mx-5 md:mx-auto my-8 pointer-events-none">
         <div class="relative flex flex-col w-full pointer-events-auto rounded border border-gray-500 bg-white">
           <div class="flex flex-shrink-0 items-center justify-between p-4 border-b">
-            <h5 id="add-bookmark-dialog-title">New Bookmark</h5>
+            <h2 id="add-bookmark-dialog-title" class="my-0">New Bookmark</h2>
             <button type="button" class="btn-modal-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
 
