add support for If-Modified-Since and If-None-Match; remove unnecessary preloads; use correct crossorigin

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,23 +3,14 @@
   <head>
     <meta charset="UTF-8"/>
 
-    <link rel="preload" href="/fontawesome-free-5.15.2-web/css/all.min.css" as="style" crossorigin="use-credentials"/>
-    <link rel="preload" href="/css/bookmarks.css" as="style" crossorigin="use-credentials"/>
+    <link rel="preload" href="/fontawesome-free-5.15.2-web/css/all.min.css" as="style" crossorigin="anonymous"/>
+    <link rel="preload" href="/css/bookmarks.css" as="style" crossorigin="anonymous"/>
     <link rel="preload" href="/fontawesome-free-5.15.2-web/webfonts/fa-solid-900.woff2" as="font" type="font/woff2" crossorigin="anonymous"/>
-
-    <link rel="preload" href="/js/jquery-3.5.1.min.js" as="script" crossorigin="use-credentials"/>
-    <link rel="preload" href="/js/tagging-1.3.3.min.js" as="script" crossorigin="use-credentials"/>
-    <link rel="preload" href="/js/bootstrap-5.0.0-beta2.bundle.min.js" as="script" crossorigin="use-credentials"/>
-    <link rel="preload" href="/js/d3-6.5.0.min.js" as="script" crossorigin="use-credentials"/>
-
-    <link rel="preload" href="/js/bookmarks/fetch-util.mjs" as="script" crossorigin="use-credentials"/>
-    <link rel="preload" href="/js/bookmarks/notify.mjs" as="script" crossorigin="use-credentials"/>
-    <link rel="preload" href="/js/bookmarks/bookmarks.mjs" as="script" crossorigin="use-credentials"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
-    <link rel="stylesheet" href="/fontawesome-free-5.15.2-web/css/all.min.css" type="text/css" crossorigin="use-credentials"/>
-    <link rel="stylesheet" href="/css/bookmarks.css" type="text/css" crossorigin="use-credentials"/>
+    <link rel="stylesheet" href="/fontawesome-free-5.15.2-web/css/all.min.css" type="text/css" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="/css/bookmarks.css" type="text/css" crossorigin="anonymous"/>
 
     <title>Bookmarks</title>
   </head>
@@ -83,11 +74,11 @@
       </div>
     </div>
 
-    <script type="text/javascript" src="/js/jquery-3.5.1.min.js" crossorigin="use-credentials"></script>
-    <script type="text/javascript" src="/js/tagging-1.3.3.min.js" crossorigin="use-credentials"></script>
-    <script type="text/javascript" src="/js/bootstrap-5.0.0-beta2.bundle.min.js" crossorigin="use-credentials"></script>
-    <script type="text/javascript" src="/js/d3-6.5.0.min.js" crossorigin="use-credentials"></script>
+    <script type="text/javascript" src="/js/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="/js/tagging-1.3.3.min.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="/js/bootstrap-5.0.0-beta2.bundle.min.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="/js/d3-6.5.0.min.js" crossorigin="anonymous"></script>
 
-    <script type="module" src="/js/bookmarks/bookmarks.mjs" crossorigin="use-credentials"></script>
+    <script type="module" src="/js/bookmarks/bookmarks.mjs"></script>
   </body>
 </html>
