--- a/frontend/src/Entry.css
+++ b/frontend/src/Entry.css
@@ -12,10 +12,10 @@
 			&:hover {
 				button {
 					&.edit-button {
-						@apply text-gray-300;
+						@apply text-gray-300 dark:text-gray-500;
 
 						&:hover {
-							@apply text-black;
+							@apply text-black dark:text-gray-300;
 						}
 					}
 				}
@@ -27,7 +27,7 @@
 		.entry {
 			button {
 				&.edit-button {
-					@apply text-gray-300;
+					@apply text-gray-300 dark:text-gray-500;
 				}
 			}
 		}
