--- a/frontend/src/Modal.css
+++ b/frontend/src/Modal.css
@@ -1,10 +1,17 @@
 @layer components {
 	.btn-modal-close {
-		@apply box-content p-2 text-black rounded border-0 opacity-50 focus:outline-none focus:ring focus:ring-gray-300;
+		@apply box-content p-2 rounded border-0 opacity-50 focus:outline-none focus:ring focus:ring-gray-300;
+		color: inherit;
 		width: 1em;
 		height: 1em;
 		margin: -.5rem -.5rem -.5rem auto;
 		background: transparent url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e") center/1em auto no-repeat;
+	}
+
+	.dark {
+		.btn-modal-close {
+			background: transparent url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e") center/1em auto no-repeat;
+		}
 	}
 }
 
