--- a/frontend/src/Switch.css
+++ b/frontend/src/Switch.css
@@ -30,8 +30,7 @@
 		}
 
 		&:checked {
-			background-color: #0d6efd;
-			border-color: #0d6efd;
+			@apply border-blue-600 bg-blue-600 dark:border-blue-400 dark:bg-blue-800;
 			background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
 			background-position: right center;
 			background-size: contain;
