--- a/frontend/src/Switch.css
+++ b/frontend/src/Switch.css
@@ -1,12 +1,3 @@
-.dark {
-	.form-check-switch {
-		&[type="checkbox"] {
-			background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%2386b7fe'/%3e%3c/svg%3e");
-			background-size: contain;
-		}
-	}
-}
-
 .form-check-switch {
 	&[type="checkbox"] {
 		width: 2em;
@@ -34,6 +25,14 @@
 			background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
 			background-position: right center;
 			background-size: contain;
+		}
+	}
+}
+
+@variants dark {
+	.form-check-switch-light {
+		&[type="checkbox"] {
+			background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%2386b7fe'/%3e%3c/svg%3e");
 		}
 	}
 }
