--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,10 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .color-scheme-dark {
+    color-scheme: dark;
+  }
+}
+
 html.dark {
-  color-scheme: dark;
+  @apply color-scheme-dark;
 }
 
 mark {
-  @apply dark:bg-slate-600 rounded-sm px-0.5 text-inherit;
+  @apply dark:bg-indigo-500/50 rounded-sm px-0.5 text-inherit;
 }
